syntax = "proto3";

package reaction;

option go_package = "/reaction";

message View {
    uint64 post_id = 1;
    uint64 appraiser_id = 2;
}

message Like {
    uint64 post_id = 1;
    uint64 appraiser_id = 2;
}
